# catinator

./: .gitignore  .gitlab-ci.yml  .gitremotes  Cargo.toml  Containerfile  README.md  README.org  config.debug.toml  config.toml  flake.nix
deploy/: jsonnetfile.json  jsonnetfile.lock.json  main.jsonnet  spec.json
deploy/environments/production/: main.jsonnet
deploy/lib/: catinator.libsonnet
macros/: Cargo.toml
macros/src/: lib.rs
macros/src/macro_types/: mod.rs  privmsg.rs
nix/: nixos-module.nix
src/: config.rs  lib.rs  main.rs
src/hooks/: intensify.rs  mod.rs  nitter.rs  pet.rs  sed.rs  shifty_eyes.rs  url.rs  wa.rs  wolfram_alpha.rs
src/hooks/sed/: mod.rs  parser.rs
src/util/: formatting.rs  mod.rs  web.rs
src/util/formatting/: color.rs  mod.rs  truncate.rs
src/util/web/: mod.rs  url_shorteners.rs
tests/resources/: wolfram_alpha_api_response.json  wolfram_alpha_api_response_of_input_with_spaces.json  wolfram_alpha_api_response_with_no_primaries.json
