[package]
name = "catinator"
version = "1.5.0"
authors = ["Max Audron <audron@cocaine.farm>"]
edition = "2018"

[dependencies]
macros = { package = "catinator_macros", version = "0", path = "./macros" }

irc = { version = "0.15", features = ["json", "tls-rust", "ctcp"], default_features = false }
irc-proto = "0.15"
sasl = "0.5"
base64 = "0.13"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

anyhow = "1"

futures = "0.3"
tokio = { version = "1.5.0", features = ["full", "rt-multi-thread"] }

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

regex = "1"
sedregex = { version = "0.2", git = "https://gitlab.com/audron/sedregex" }

rand = "0.8.3"

reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "gzip"] }
urlparse = "0.7.3"

[dev-dependencies]
mockito = "0.30.0"

[features]
default = []

bench = []

[workspace]
members = ["macros"]
