[package]
name = "catinator"
version = "1.6.5"
authors = ["Max Audron <audron@cocaine.farm>"]
edition = "2018"

license = "ISC"
description = "High Level IRC Bot library and instance"
homepage = "https://gitlab.com/cocainefarm/gnulag/catinator"
repository = "https://gitlab.com/cocainefarm/gnulag/catinator"
documentation = "https://docs.rs/catinator"
readme = "README.md"
keywords = ["irc", "bot", "async"]

exclude = ["deploy", ".cache"]

[dependencies]
macros = { package = "catinator_macros", version = "0", path = "./macros" }

irc = { version = "1", features = [
    "json",
    "tls-rust",
    "ctcp",
], default-features = false }
irc-proto = "1"
sasl = "0.5"
base64 = "0.22"

figment = { version = "0.10", features = ["env", "toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

anyhow = "1"
thiserror = "2"

futures = "0.3"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"

regex = "1"

rand = "0.9"

rustls = "0.23"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "gzip",
] }
urlparse = "0.7"
async-trait = "0.1"

bitflags = "2"

unicode-segmentation = "1"

[dev-dependencies]
mockito = "1"

[features]
default = []

bench = []

[workspace]
members = ["macros"]
