[package]
name = "catinator_macros"
version = "0.2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["parsing"] }
proc-macro2 = "1"
quote = "1"

[dev-dependencies]
tokio = "*"
futures = "*"
irc = { version = "0.15", features = ["json", "tls-rust"], default_features = false }
tracing = "*"
anyhow = "*"
regex = "*"
catinator = { path = "../" }
