[package]
name = "catinator_macros"
version = "0.3.0"
edition = "2018"
description = "proc macros for catinator"
license = "ISC"
homepage = "https://gitlab.com/cocainefarm/gnulag/catinator"
repository = "https://gitlab.com/cocainefarm/gnulag/catinator"
documentation = "https://docs.rs/catinator_macros"


[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
quote = "1"

[dev-dependencies]
tokio = "1"
futures = "0"
irc = { version = "1", features = [
    "json",
    "tls-rust",
], default-features = false }
tracing = "0"
anyhow = "1"
regex = "1"
catinator = { path = "../" }
